# moveit

./: .gitignore
moveit_core/: CMakeLists.txt
moveit_core/collision_detection_physx/: CMakeLists.txt
moveit_core/collision_detection_physx/include/moveit/collision_detection_physx/: collision_common.h  collision_detector_allocator_physx.h  collision_robot_physx.h  collision_world_physx.h
moveit_core/collision_detection_physx/src/: collision_common.cpp  collision_robot_physx.cpp  collision_world_physx.cpp
moveit_core/collision_detection_physx/test/: test_physx_collision_detection.cpp
